--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kopal Garg
 description: Machine Learning Researcher and Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/kopalgarg/kopalgarg.github.io/master/images/KopalGarg.png
+avatar: https://github.com/kopalgarg/kopalgarg.github.io/blob/main/images/KopalGarg.jpeg?raw=true
 
 #
 # Flags below are optional
